# secureVault

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  Best Practice.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/favicon.ico/: route.ts
app/offline/: page.tsx
components/: connection-status.tsx  service-worker-registration.tsx  vault-backup.tsx  vault-console.tsx  vault-record-form.tsx  vault-record-list.tsx  vault-search.tsx
docs/: PRD_V1_1.md  Prompt.md  Prompt_SQLite_Phase1.md  Prompt_SQLite_Phase2.md  Prompt_SQLite_Phase3.md  Prompt_SQLite_Phase4.md  Prompt_SQLite_Phase5.md  Prompt_SQLite_Phase6.md  Prompt_SQLite_phase8.md  acceptance_criteria.md  architecture - SecureVault AI with Diagram.md  architecture.md  chroma_contract.md  data_exposure_policy.md  implement.md  migration_plan_sqlite.md  plans.md  sqlite_target_schema.md  storage_schema.md  tauri_packaging_readiness.md  test_strategy.md
lib/crypto/: base64.ts  vault-crypto.ts
lib/storage/: indexeddb.ts
lib/vault/: account.ts  ai-client.ts  ai-index.ts  ai-jobs.ts  backup-repository.ts  backup.ts  job-repository.ts  local-vault-api.ts  record-repository.ts  (+6 more)
local-vault-api/: .env.example  README.md  run_local_vault_api.py
public/: sw.js
scripts/: check-tauri-prereqs.mjs  run-tauri-command.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: backup-repository.test.ts  job-repository.test.ts  record-repository.test.ts  settings-repository.test.ts
(+19 files in other folders)
